Workaround broken Travis
Travis seems to generate commands for an obsolete xctool.
Fix this by explicitly specifying the scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,23 @@
 language: objective-c
 
+branches:
+ only:
+ - master
+
 xcode_project: TaskQueue.xcodeproj
 xcode_scheme: TaskQueue
 osx_image: xcode8.3
 xcode_sdk:
   - macosx
   - iphonesimulator
-  - iphonesimulator9.2
+  - iphonesimulator9.0
   - appletvsimulator
+
+
+script:
+- xcrun xctool -project TaskQueue.xcodeproj -scheme TaskQueue -sdk iphonesimulator run-tests
+- xcrun xctool -project TaskQueue.xcodeproj -scheme TaskQueue -sdk iphonesimulator9.0 run-tests
+- xcrun xctool -project TaskQueue.xcodeproj -scheme TaskQueue -sdk macosx run-tests
+- xcrun xctool -project TaskQueue.xcodeproj -scheme TaskQueue -sdk macosx10.10 run-tests
+- xcrun xctool -project TaskQueue.xcodeproj -scheme TaskQueue -sdk appletvsimulator run-tests
+- xcrun xctool -project TaskQueue.xcodeproj -scheme TaskQueue -sdk appletvsimulator10.0 run-tests
